documentation.css
/* navbar starts*/

body {
  background-color: var(--background-color);
  position: absolute;
}

.container {
  min-height: 100vh;
  max-width: 100%;
  margin-bottom: 10rem;
  padding-right: 5rem;
  display: grid;
  grid-template-columns: 28rem 1fr;
  grid-template-rows: 8rem 1fr;
  gap: 2rem;
  grid-template-areas:
    "header header"
    "aside  main";
}

.document-container {
  margin-top: 10rem;
}

iframe {
  margin-top: 8rem;
}

.main-navbar {
  width: 100%;
  height: 13rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 2rem 0.5rem;
  position: fixed;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  z-index: 10;
  top: 0;
  grid-area: header;
  column-gap: 5rem;
  background-image: linear-gradient(
    to right,
    var(--background-white-color),
    var(--primary-color)
  );
}

.left-nav {
  font-size: 3rem;
  font-weight: 900;
}

.left-nav a {
  color: var(--secondary-text-color);
  text-decoration: none;
  margin-top: 1.25rem;
  text-shadow: 1px 1px 5px;
  margin-left: 2rem;
}

.right-nav {
  display: flex;
  justify-content: space-evenly;
  width: 31.25rem;
}

.right-nav li {
  list-style-type: none;
}

.right-nav a {
  text-decoration: none;
  font-size: 1.8rem;
  color: var(--background-white-color);
  font-weight: 500;
}

.right-nav a:hover {
  border-bottom: 3px solid var(--background-white-color);
  font-weight: 900;
}
/* navbar ends */

/* main-container starts */

.side-navbar {
  font-size: 2rem;
  border-right: 2px solid var(--primary-color);
  position: fixed;
  top: 15rem;
  left: 0;
  z-index: 10;
  grid-area: aside;
  margin-top: 5rem;
  height: 60rem;
  overflow: scroll;
}

.side-navbar-item a {
  margin-left: 5rem;
  color: var(--secondary-text-color);
  text-decoration: none;
  margin-right: 13rem;
}

.side-navbar p {
  margin-top: 2.2rem;
}

.side-navbar-item a:hover {
  background-color: var(--primary-light-color);
  padding: 1rem;
  border-radius: 0.5rem;
}

.side-navbar h4 {
  margin-top: 1.2rem;
  margin-left: 2.5rem;
  color: var(--primary-text-color);
  font-weight: 700;
}

/* side-navbar ends */

.document-container {
  grid-area: main;
  margin-left: 4rem;
  height: 100%;
}

.comp-example-sub-container {
  width: 80rem;
  display: flex;
  column-gap: 2rem;
  align-items: center;
}

.avatar-example-sub-container {
  border: 2px solid var(--primary-color);
  padding: 2rem;
  margin-bottom: 4rem;
  display: flex;
  column-gap: 2rem;
  align-items: center;
  max-width: 80rem;
}

.component-code-example {
  margin-top: 3rem;
  margin-left: 10rem;
  width: 80rem;
  height: 40rem;
}

.component-para {
  margin-top: 4rem;
  margin-bottom: 4rem;
  color: var(--primary-text-color);
  margin-right: 2rem;
}

.component-code-example::-webkit-scrollbar {
  display: none;
}

.component-code-example::-webkit-scrollbar-thumb {
  background: var(--secondary-color);
}

.component-highlight {
  color: var(--primary-color);
  margin-bottom: 2rem;
  font-weight: 700;
}

.avatar-sect {
  display: flex;
  column-gap: 2rem;
  align-items: center;
}

.badge-sect {
  display: flex;
  column-gap: 10rem;
  align-items: center;
}

.btn {
  margin-right: 1rem;
}

.floating-action-btn {
  margin-right: 2rem;
}

.fa-facebook-square {
  color: #4267b2;
}

.fa-whatsapp {
  color: #25d366;
}

.basic-input {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-top: 2rem;
}

.headings {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
  border: 4px solid var(--primary-color);
  padding: 1rem;
}

.list-examples {
  display: flex;
  column-gap: 3rem;
  border: 3px solid var(--primary-color);
  padding: 1rem;
}

.list-border {
  border: 2px solid var(--primary-color);
  padding: 1rem;
}

.show-modal-btn {
  cursor: pointer;
  padding: 1rem 1rem;
  width: fit-content;
  font-size: 1.5rem;
  height: fit-content;
  border-radius: 0.5rem;
  border: 3px solid var(--primary-color);
  background-color: var(--background-white-color);
  color: var(--primary-color);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  outline: none;
  margin-left: 40rem;
}

.show-modal-btn:active {
  transform: translateX(1rem);
}

/* TOAST SECTION */

.toast-example {
  display: flex;
  flex-direction: column;
  justify-content: center;
  row-gap: 3rem;
  align-items: center;
}

/* RATING SECTION */

.rating-example {
  display: flex;
  justify-content: space-around;
}

/* GRID SECTION */

.grid-50-50 img {
  width: 500px;
  height: 500px;
}

.grid-example {
  border: 1px solid black;
  padding: 1rem;
}

.paris-pic {
  width: 420px;
  height: 460px;
}

.watch-pic {
  width: 615px;
}

.grid-items-3 img {
  width: 350px;
  height: 500px;
}

